--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -1,63 +1,10 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <title>Inmobiliaria</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--CSS REQUIRED-->
-    <link rel="icon" th:href="@{/assets/img/favicon.ico}">
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/shards.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/main-style.css}">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="http://kenwheeler.github.io/slick/slick/slick-theme.css"/>
-</head>
+<head th:replace="client/fragments/navbar::headerfiles"></head>
 <body>
 <div class="welcome-container">
-    <nav id="navbar-index" class="navbar navbar-expand-lg navbar-dark pt-0 pl-1 pr-1">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavIndex"
-                aria-controls="navbarNavIndex" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse rr-flex" id="navbarNavIndex">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Mi cuenta</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contáctanos</a>
-                </li>
-
-            </ul>
-
-            <!-- Social Icons -->
-            <ul class="header-social-icons navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="https://twitter.com/DesignRevision"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://www.facebook.com/designrevision"><i
-                            class="fab fa-facebook"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://dribbble.com/hisk"><i class="fab fa-dribbble"></i></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/designrevision"><i
-                            class="fab fa-github"></i></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    <nav th:replace="client/fragments/navbar::index"></nav>
     <!-- Inner Wrapper -->
     <div class="inner-wrapper">
         <div id="carousel-holder" class="index-screen-mask">
@@ -125,45 +72,34 @@
                         <form class="d-flex flex-row justify-content-center" th:action="@{/search}" method="post">
                             <div class="row w-100 pb-md-5">
                                 <div class="col-md-3">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="fas fa-money-bill-wave"></i></span>
-                                        </div>
-                                        <select id="tipo" class="form-control custom-select">
-                                            <option>Comprar</option>
-                                            <option>Alquilar</option>
-                                        </select>
-                                    </div>
+                                    <select id="tipo"
+                                            class="btn btn-outline-primary text-white w-100">
+                                        <option>Comprar</option>
+                                        <option>Alquilar</option>
+                                    </select>
                                 </div>
                                 <div class="col-md-3">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="fas fa-map-marker-alt"></i></span>
-                                        </div>
-                                        <select id="ubicacion" class="form-control custom-select">
-                                            <option>Todo el país</option>
-                                            <option>Ahuachapán</option>
-                                            <option>Cabañas</option>
-                                            <option>Chalatenango</option>
-                                            <option>Cuscatlán</option>
-                                            <option>La Libertad</option>
-                                            <option>La Paz</option>
-                                            <option>La Unión</option>
-                                            <option>Morazán</option>
-                                            <option>San Miguel</option>
-                                            <option>San Salvador</option>
-                                            <option>San Vicente</option>
-                                            <option>Santa Ana</option>
-                                            <option>Sonsonate</option>
-                                            <option>Usulután</option>
-                                        </select>
-                                    </div>
+                                    <select id="ubicacion"
+                                            class="btn btn-outline-primary text-white w-100">
+                                        <option>Todo el país</option>
+                                        <option>Ahuachapán</option>
+                                        <option>Cabañas</option>
+                                        <option>Chalatenango</option>
+                                        <option>Cuscatlán</option>
+                                        <option>La Libertad</option>
+                                        <option>La Paz</option>
+                                        <option>La Unión</option>
+                                        <option>Morazán</option>
+                                        <option>San Miguel</option>
+                                        <option>San Salvador</option>
+                                        <option>San Vicente</option>
+                                        <option>Santa Ana</option>
+                                        <option>Sonsonate</option>
+                                        <option>Usulután</option>
+                                    </select>
                                 </div>
                                 <div class="col-md-3">
-                                    <div class="input-group">
-                                        <a id="price-btn" class="btn btn-outline-primary w-100 text-white">Rango de precio</a>
-
-                                    </div>
+                                    <div th:replace="client/fragments/popover::price"></div>
                                 </div>
                                 <div class="col-md-3">
                                     <button class="btn btn-outline-primary w-100 text-white" type="submit">Buscar<i
@@ -199,24 +135,23 @@
     <!-- / Inner Wrapper -->
 </div>
 <!--  Inner Wrapper 2 -->
-<div id="intro-items" class="mt-2 mb-5">
+<div id="intro-items" class="mt-4 mb-5">
     <div class="card mr-2 ml-2" th:href="@{/description}">
         <div class="salient-img">
             <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
-            <div class="salient-action">
-                <span>Renta</span>
+            <div class="btn btn-sm btn btn-sm salient-action">
+                <span>Alquiler</span>
             </div>
             <div class="salient-fav fav-format">
                 <i class="fas fa-star text-warning"></i>
             </div>
         </div>
-
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                <h5 class="card-title text-accent">Amplia y recién construida</h5><i
                     class="fas fa-heart text-danger fav-format"></i>
             </div>
-            <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+            <h5><i class="fas fa-dollar-sign"></i>1000</h5>
             <hr>
             <p>
                 <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -243,8 +178,8 @@
     <div class="card mr-2 ml-2" th:href="@{/description}">
         <div class="salient-img">
             <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
-            <div class="salient-action">
-                <span>Renta</span>
+            <div class="btn btn-sm salient-action">
+                <span>Alquiler</span>
             </div>
             <div class="salient-fav fav-format">
                 <i class="fas fa-star text-warning"></i>
@@ -252,10 +187,10 @@
         </div>
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                <h5 class="card-title text-accent">Recién remodelada</h5><i
                     class="fas fa-heart text-danger fav-format"></i>
             </div>
-            <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+            <h5><i class="fas fa-dollar-sign"></i>1000</h5>
             <hr>
             <p>
                 <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -282,8 +217,8 @@
     <div class="card mr-2 ml-2" th:href="@{/description}">
         <div class="salient-img">
             <img class="card-img-top" th:src="@{/assets/img/house3.jpg}" alt="Card image cap">
-            <div class="salient-action">
-                <span>Renta</span>
+            <div class="btn btn-sm salient-action">
+                <span>Alquiler</span>
             </div>
             <div class="salient-fav fav-format">
                 <i class="fas fa-star text-warning"></i>
@@ -292,10 +227,10 @@
 
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                <h5 class="card-title text-accent">Se necesita inquilino, rápido</h5><i
                     class="fas fa-heart text-danger fav-format"></i>
             </div>
-            <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+            <h5><i class="fas fa-dollar-sign"></i>1000</h5>
             <hr>
             <p>
                 <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -322,8 +257,8 @@
     <div class="card mr-2 ml-2" th:href="@{/description}">
         <div class="salient-img">
             <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
-            <div class="salient-action">
-                <span>Renta</span>
+            <div class="btn btn-sm salient-action">
+                <span>Alquiler</span>
             </div>
             <div class="salient-fav fav-format">
                 <i class="fas fa-star text-warning"></i>
@@ -332,10 +267,10 @@
 
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                <h5 class="card-title text-accent">Exclusiva del sitio web</h5><i
                     class="fas fa-heart text-danger fav-format"></i>
             </div>
-            <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+            <h5><i class="fas fa-dollar-sign"></i>1000</h5>
             <hr>
             <p>
                 <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -362,8 +297,8 @@
     <div class="card mr-2 ml-2" th:href="@{/description}">
         <div class="salient-img">
             <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
-            <div class="salient-action">
-                <span>Renta</span>
+            <div class="btn btn-sm salient-action">
+                <span>Alquiler</span>
             </div>
             <div class="salient-fav fav-format">
                 <i class="fas fa-star text-warning"></i>
@@ -372,10 +307,10 @@
 
         <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                <h5 class="card-title text-accent">Diseño rústico</h5><i
                     class="fas fa-heart text-danger fav-format"></i>
             </div>
-            <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+            <h5><i class="fas fa-dollar-sign"></i>1000</h5>
             <hr>
             <p>
                 <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -401,33 +336,38 @@
     </div>
 </div>
 <!-- / Inner Wrapper 2-->
-<div id="price-nav-popover" class="popover hide">
-    <h3 class="popover-header">Precio</h3>
-    <div class="popover-body">
-        <div id="price-range-slider">
-            <input type="hidden" class='custom-slider-input'
-                   name="custom-slider-value-1">
-            <input type="hidden" class='custom-slider-input'
-                   name="custom-slider-value-2">
-        </div>
-        <div class="input-group">
-            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon1"><i
-                                        class="fas fa-dollar-sign"></i></span>
+<footer>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">Inmobiliaria</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="header-social-icons navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i
+                                class="fab fa-facebook"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fab fa-dribbble"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i
+                                class="fab fa-github"></i></a>
+                    </li>
+                </ul>
             </div>
-            <input type="number" id="min-price" class="form-control"
-                   placeholder="Min"
-                   aria-label="min-price"
-                   aria-describedby="basic-addon1">
-            <input type="number" id="max-price" class="form-control"
-                   placeholder="Max"
-                   aria-label="max-price"
-                   aria-describedby="basic-addon2">
         </div>
-    </div>
-</div>
+    </nav>
+</footer>
+
 
 <script type="text/javascript" th:src="@{/assets/js/general/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/general/wNumb.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/popper.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/bootstrap.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/shards.min.js}"></script>
