--- a/src/main/resources/templates/client/search.html
+++ b/src/main/resources/templates/client/search.html
@@ -1,119 +1,16 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <title>Inmobiliaria</title>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--CSS REQUIRED-->
-    <link rel="icon" th:href="@{/assets/img/favicon.ico}">
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/bootstrap.min.css}" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/shards.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/assets/css/main-style.css}">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" id="main-stylesheet" data-version="1.1.0"
-          th:href="@{/assets/css/shards-dashboards.1.1.0.min.css}">
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-</head>
+<head th:replace="client/fragments/navbar::headerfiles"></head>
 <body>
 <!--nav bar -->
 <header id="menu-search" class="bg-light">
-    <nav class="navbar navbar-expand-lg pt-0 pl-2 pb-0 navbar-light w-100">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse rr-flex" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Mi cuenta</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contáctanos</a>
-                    </li>
-
-                </ul>
-
-                <!-- Social Icons -->
-                <ul class="header-social-icons navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com/DesignRevision"><i class="fab fa-twitter"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.facebook.com/designrevision"><i
-                                class="fab fa-facebook"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://dribbble.com/hisk"><i class="fab fa-dribbble"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/designrevision"><i
-                                class="fab fa-github"></i></a>
-                    </li>
-                </ul>
-            </div>
-    </nav>
+    <nav th:replace="client/fragments/navbar::commun"></nav>
     <div class="row pr-3 pl-3 pb-2 ">
         <div class="col-md-9">
             <div class="flex-row justify-content-between">
-                <h5 class="title mt-1 d-inline">Filtros&nbsp;&nbsp;</h5>
-                <button class="btn btn-outline-primary">Ubicación</button>
-                <button class="btn btn-outline-primary">Tipo de propiedad</button>
-                <button class="btn btn-primary">+1 amb</button>
-                <button class="btn btn-outline-primary">Cocheras</button>
-                <!-- price filter  -->
-                <button id="price-btn" class="btn btn-outline-primary">Precio</button>
-                <div id="price-nav-popover" class="popover hide">
-                    <h3 class="popover-header">Precio</h3>
-                    <div class="popover-body">
-                        <div id="price-range-slider">
-                            <input type="hidden" class='custom-slider-input' name="custom-slider-value-1">
-                            <input type="hidden" class='custom-slider-input' name="custom-slider-value-2">
-                        </div>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon1"><i
-                                        class="fas fa-dollar-sign"></i></span>
-                            </div>
-                            <input type="number" id="min-price" class="form-control" placeholder="Min"
-                                   aria-label="min-price"
-                                   aria-describedby="basic-addon1">
-                            <input type="number" id="max-price" class="form-control" placeholder="Max"
-                                   aria-label="max-price"
-                                   aria-describedby="basic-addon2">
-                        </div>
-                    </div>
-                </div>
-                <!-- / price filter -->
-                <!-- surface filter  -->
-                <button id="surface-btn" class="btn btn-outline-primary">Superficie</button>
-                <div id="surface-nav-popover" class="popover hide">
-                    <h3 class="popover-header">Superficie</h3>
-                    <div class="popover-body">
-                        <div id="surface-range-slider">
-                            <input type="hidden" class='custom-slider-input' name="custom-slider-value-1">
-                        </div>
-                        <div class="input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text" id="basic-addon-surface"><i
-                                        class="fas fa-dollar-sign"></i></span>
-                            </div>
-                            <input type="number" id="min-surface" class="form-control" placeholder="Min"
-                                   aria-label="min-surface"
-                                   aria-describedby="basic-addon-surface">
-                        </div>
-                    </div>
-                </div>
-                <!-- / surface filter  -->
+                <h5 class="title mt-1 d-inline">Filtros</h5>
+                <div th:replace="client/fragments/search-filters::property"></div>
             </div>
         </div>
         <div class="col-md-3">
@@ -129,17 +26,17 @@
 <div class="container-fluid search-size">
     <div class="row search-size">
         <div id="search-results-container" class="col-md-12">
-            <div class="container mt-4">
+            <div class="container-fluid mt-4 pr-0 pl-0">
                 <h3 class="title pt-2 pb-1 col-md-12 col-sm-12">Resultados de busqueda</h3>
-                <div class="row">
-                    <div id="search-results" class="col-md-12 row">
-                        <div class="col-md-4 mb-4 ml-auto mr-auto">
+                <div class="col-md-12">
+                    <div id="search-results" class="row justify-content-center">
+                        <div class="col-md-3 mb-4">
                             <a th:href="@{/description}" class="custom-card">
                             <div class="card target-found" >
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
-                                    <div class="salient-action">
-                                        <span>Renta</span>
+                                    <div class="btn btn-sm salient-action">
+                                        <span>Alquiler</span>
                                     </div>
                                     <div class="salient-fav fav-format">
                                         <i class="fas fa-star text-warning"></i>
@@ -148,10 +45,10 @@
 
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                        <h5 class="card-title text-accent">Amplia y recién construida</h5><i
                                             class="fas fa-heart text-danger fav-format"></i>
                                     </div>
-                                    <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                                    <h5><i class="fas fa-dollar-sign"></i>1000</h5>
                                     <hr>
                                     <p>
                                         <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -174,13 +71,13 @@
                             </div>
                             </a>
                         </div>
-                        <div class="col-md-4 mb-4 ml-auto mr-auto">
+                        <div class="col-md-3 mb-4">
                             <a th:href="@{/description}" class="custom-card">
                             <div class="card target-found" >
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
-                                    <div class="salient-action">
-                                        <span>Renta</span>
+                                    <div class="btn btn-sm salient-action">
+                                        <span>Alquiler</span>
                                     </div>
                                     <div class="salient-fav fav-format">
                                         <i class="fas fa-star text-warning"></i>
@@ -189,10 +86,10 @@
 
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                        <h5 class="card-title text-accent">Exculsiva del sitio web</h5><i
                                             class="fas fa-heart text-danger fav-format"></i>
                                     </div>
-                                    <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                                    <h5><i class="fas fa-dollar-sign"></i>1000</h5>
                                     <hr>
                                     <p>
                                         <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -215,13 +112,13 @@
                             </div>
                             </a>
                         </div>
-                        <div class="col-md-4 mb-4 ml-auto mr-auto">
+                        <div class="col-md-3 mb-4">
                             <a th:href="@{/description}" class="custom-card">
                             <div class="card target-found">
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house3.jpg}" alt="Card image cap">
-                                    <div class="salient-action">
-                                        <span>Renta</span>
+                                    <div class="btn btn-sm salient-action">
+                                        <span>Alquiler</span>
                                     </div>
                                     <div class="salient-fav fav-format">
                                         <i class="fas fa-star text-warning"></i>
@@ -230,10 +127,10 @@
 
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                        <h5 class="card-title text-accent">Diseño rústico</h5><i
                                             class="fas fa-heart text-danger fav-format"></i>
                                     </div>
-                                    <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                                    <h5><i class="fas fa-dollar-sign"></i>1000</h5>
                                     <hr>
                                     <p>
                                         <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -256,13 +153,13 @@
                             </div>
                             </a>
                         </div>
-                        <div class="col-md-4 mb-4 ml-auto mr-auto">
+                        <div class="col-md-3 mb-4">
                             <a th:href="@{/description}" class="custom-card">
                             <div class="card target-found">
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house3.jpg}" alt="Card image cap">
-                                    <div class="salient-action">
-                                        <span>Renta</span>
+                                    <div class="btn btn-sm salient-action">
+                                        <span>Alquiler</span>
                                     </div>
                                     <div class="salient-fav fav-format">
                                         <i class="fas fa-star text-warning"></i>
@@ -271,10 +168,10 @@
 
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                        <h5 class="card-title text-accent">Removida a final de agosto</h5><i
                                             class="fas fa-heart text-danger fav-format"></i>
                                     </div>
-                                    <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                                    <h5><i class="fas fa-dollar-sign"></i>1000</h5>
                                     <hr>
                                     <p>
                                         <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -297,13 +194,13 @@
                             </div>
                             </a>
                         </div>
-                        <div class="col-md-4 mb-4 ml-auto mr-auto">
+                        <div class="col-md-3 mb-4">
                             <a th:href="@{/description}" class="custom-card">
                             <div class="card target-found">
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house2.jpg}" alt="Card image cap">
-                                    <div class="salient-action">
-                                        <span>Renta</span>
+                                    <div class="btn btn-sm salient-action">
+                                        <span>Alquiler</span>
                                     </div>
                                     <div class="salient-fav fav-format">
                                         <i class="fas fa-star text-warning"></i>
@@ -312,10 +209,10 @@
 
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                        <h5 class="card-title text-accent">Recién remodelada</h5><i
                                             class="fas fa-heart text-danger fav-format"></i>
                                     </div>
-                                    <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                                    <h5><i class="fas fa-dollar-sign"></i>1000</h5>
                                     <hr>
                                     <p>
                                         <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -338,13 +235,13 @@
                             </div>
                             </a>
                         </div>
-                        <div class="col-md-4 mb-4 ml-auto mr-auto">
+                        <div class="col-md-3 mb-4">
                             <a th:href="@{/description}" class="custom-card">
                             <div class="card target-found">
                                 <div class="salient-img">
                                     <img class="card-img-top" th:src="@{/assets/img/house1.jpg}" alt="Card image cap">
-                                    <div class="salient-action">
-                                        <span>Renta</span>
+                                    <div class="btn btn-sm salient-action">
+                                        <span>Alquiler</span>
                                     </div>
                                     <div class="salient-fav fav-format">
                                         <i class="fas fa-star text-warning"></i>
@@ -353,10 +250,10 @@
 
                                 <div class="card-body">
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <h5 class="card-title text-accent">Colonia Escalon</h5><i
+                                        <h5 class="card-title text-accent">Se necesita inquilino, rápido</h5><i
                                             class="fas fa-heart text-danger fav-format"></i>
                                     </div>
-                                    <h6><i class="fas fa-dollar-sign"></i>1000.00</h6>
+                                    <h5><i class="fas fa-dollar-sign"></i>1000</h5>
                                     <hr>
                                     <p>
                                         <i class="fas fa-map-marker-alt text-muted mr-3"></i> 75 avenida norte
@@ -391,6 +288,7 @@
 </body>
 
 <script type="text/javascript" th:src="@{/assets/js/general/jquery-3.3.1.slim.min.js}" crossorigin="anonymous"></script>
+<script type="text/javascript" th:src="@{/assets/js/general/wNumb.js}"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/popper.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/bootstrap.min.js}" crossorigin="anonymous"></script>
 <script type="text/javascript" th:src="@{/assets/js/general/shards.min.js}"></script>
